--- a/style.css
+++ b/style.css
@@ -1,5 +1,11 @@
 h1{
     color:blue;
-    height: 20px;
+    height: auto;
     background-color: burlywood;
 }
+.center {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
+  }
